2010-01-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.cpp, itpp/base/vec.h: Move dot() and
	outer_product() specialisations to vec.cpp

	* win32/itpp_mkl_tests/*.vcproj: Update MKL libraries in MSVC++
	project files for test programs

2010-01-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/itcompat.h, itpp/config_msvc.h:
	Undefine min, max and log2 macros.

	If these macros were defined they would collide with our
	overloaded functions.

2010-01-05  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/local/verification.doc: Added Ubuntu 9.10 to list of tested
	systems

2010-01-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Add Bogdan to the list of
	developers

	* Makefile.am: Do not install itpp-config.1 man page two times.

	This resulted in installation errors on Ubuntu 9.10. By the way,
	add missing files to the distribution package.

2010-01-02  Bogdan Cristea  <cristeab@users.sourceforge.net>

        * itpp/base/itcompat.h: Fixes bug report #2924984

2010-01-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* NEWS: Prepare release notes for the new stable release

	* NEWS, NEWS-4.0: Move 4.0.x release notes to a separate file

	* configure.ac.in: Update bugs reporting link

	* configure.ac.in, itpp-config.1.in, extras/*, itpp/**/*.cpp,
	itpp/**/*.h, tests/*.cpp: Update copyright dates to `1995-2010'

2009-12-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/index.doc.in: Update links

	* AUTHORS, doc/local/authors.doc: Update the list of developers

-------------------------------------------------------------------------------

2009-12-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.7 release (SVN tag: release-4-0-7)

	* NEWS, VERSION: Add release notes and update version number for
	IT++ 4.0.7 release.

	* configure.ac.in: Do not enable any optimization for the debug
	build
